<resources>
    <string name="app_name">ShakeandCheer</string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nickname">İsim</string>
    <string name="bestscore">En iyi Puan</string>
    <string name="basliyor">Başlıyor</string>
    <string name="dogri">Doğru</string>
    <string name="pas">Pas</string>
    <string name="tebrikler">Tebrikler</string>
    <string name="basarisiz">Başarısız</string>
    <string name="yenidendene">Yeniden Dene</string>
    <string name="yenidenistermisini">Yeniden Denemek İster misin?</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="dur">Durdu</string>
    <string name="devam">Devam Ediyor</string>
    <string name="fotograf">Bir Fotograf Çek</string>
    <string name="area">Alan</string>
    <string name="regitertitle">Kullanıcı Kaydı</string>
   <string name="registerbutton">Kaydet</string>
   <string name="status">Sonuç</string>
   <string name="registerinfo">İsmi Girmedin!!!</string>
   <string name="waiting">Bekliyiniz</string>
   <string name="warning">Hatırlatma</string>
   <string name="existing">Devam Eden bir aktivite var</string>
   <string name="condo">Aktiviteye Devam etmek istermisin?</string>
   <string name="langtitle">Language Options</string>
   <string name="faciklama">1-10 kategori var</string>
      <string name="saciklama">30 saniye içinde size gelen 6 kelimeyi karşınızdakine anlatmayya çalışıyorsunuz</string>
         <string name="taciklama">Eğer karşı taraf doğru bilirse telefonunuzun ses açma tuşlarınından birine bas</string>
            <string name="ffaciklama">yanlışsa z ekseninde telefonu salla</string>
      <string name="eaa">Oyun Açıklaması</string>
 <string-array name="languages">
     <item>Turkish</item>
     <item>English</item>
     <item>German</item>
     <item>Japan</item>
     
 </string-array>
    <string-array name="ozanmenu">
        <item>Home</item>
        <item>Verbs</item>
        <item>Clothes</item>
        <item>Body</item>
        <item>Cars</item>
        <item>Actors</item>
        <item>Animals</item>
        <item>Eating</item>
        <item>Jobs</item>
        <item>Pokemons</item>
        <item>Sports</item>
        <item>Language Options</item>
        <item>Game Info</item>
    </string-array>
    <string-array name="actor">
        
        <item>Johnny Depp</item>
        <item>Arnold Schwarzenegger</item>
        <item>Jim Carrey</item>
        <item>Emma Watson</item>
        <item>Daniel Radcliffe</item>
        <item>Leonardo DiCaprio</item>
        <item>Tom Cruise</item>
        <item>Brad Pitt</item>
        <item>Charles Chaplin</item>
        <item>Morgan Freeman</item>
        <item>Tom Hanks</item>
        <item>Hugh Jackman</item>
        <item>Matt Damon</item>
        <item>Sylvester Stallone</item>
        <item>Will Smith</item>
        <item>Clint Eastwood</item>
        <item>Cameron Diaz</item>
        <item>George Clooney</item>
        <item>Steven Spielberg</item>
        <item>Harrison Ford</item>
        <item>Robert De Niro</item>
        <item>Al Pacino</item>
        <item>Robert Downey Jr.</item>
        <item>Russell Crowe</item>
        <item>Liam Neeson</item>
        <item>Kate Winslet</item>
        <item>Mark Wahlberg</item>
        <item>Natalie Portman</item>
        <item>Pierce Brosnan</item>
        <item>Sean Connery</item>
        <item>Orlando Bloom</item>
        <item>Dwayne Johnson</item>
        <item>Jackie Chan</item>
        <item>Angelina Jolie</item>
        <item>Adam Sandler</item>
        <item>Scarlett Johansson</item>
        <item>Heath Ledger</item>
        <item>Anne Hathaway</item>
        <item>Jessica Alba</item>
        <item>Edward Norton</item>
        <item>Keira Knightley</item>
        <item>Bradley Cooper</item>
        <item>Will Ferrell</item>
        <item>Julia Roberts</item>
        <item>Nicolas Cage</item>
        <item>Daniel Craig </item>
        <item>Keanu Reeves</item>
        <item>Ian McKellen</item>
        <item>Halle Berry</item>
        <item>Bruce Willis</item>
        <item>Samuel L. Jackson</item>
        <item>Ben Stiller</item>
        <item>Tommy Lee Jones</item>
        <item>Antonio Banderas</item>
        <item>Denzel Washington</item>
        <item>Steve Carell</item>
        <item>Shia LaBeouf</item>
        <item>Megan Fox</item>
        <item>James Franco</item>
        <item>Mel Gibson</item>
        <item>Vin Diesel</item>
        <item>Tim Allen</item>
        <item>Robin Williams</item>
        <item>Kevin Spacey</item>
        <item>Jason Biggs</item>
        <item>Seann William Scott</item>
        <item>Jean-Claude Van Damme</item>
        <item>Zach Galifianakis</item>
        <item>Owen Wilson</item>
        <item>Christian Bale</item>
        <item>Peter Jackson</item>
        <item>Sandra Bullock</item>
        <item>Bruce Lee</item>
        <item>Drew Barrymore</item>
        <item>Macaulay Culkin</item>
        <item>Jack Nicholson</item>
        <item>Bill Murray</item>
        <item>Sigourney Weaver</item>
        <item>Jake Gyllenhaal</item>
        <item>Kamal Haasan</item>
        <item>Jason Statham</item>
        <item>Jet Li</item>
        <item>Kate Beckinsale</item>
        <item>Rowan Atkinson</item>
        <item>Marlon Brando</item>
        <item>John Travolta</item>
        <item>Channing Tatum</item>
        <item>Ben Affleck</item>
        <item>Shah Rukh Khan</item>
        <item>Jennifer Aniston</item>
        <item>Emma Stone</item>
        <item>Chris Hemsworth</item>
        <item>James McAvoy</item>
        <item>James Cameron</item>
        <item>Amitabh Bachchan</item>
        <item>Brendan Fraser</item>
        <item>Rachel McAdams</item>
        <item>Tom Hiddleston</item>
        <item>Aamir Khan</item>
        <item>Rajinikanth</item>
    </string-array>
    <string-array name="car">
        <item>Abarth</item>
         <item>Alfa Romeo</item>
          <item>Asia Motors</item>
           <item>Aston Martin</item>
            <item>Audi</item>
             <item>Austin</item>
              <item>Autobianchi</item>
              <item>Bentley</item>
              <item>BMW</item>
              <item>Bugatti</item>
              <item>Buick</item>
              <item>Cadillac</item>
              <item>Carver</item>
              <item>Chevrolet</item>
              <item>Chrysler</item>
              <item>Citroen</item>
              <item>Corvette</item>
              <item>Dacia</item>
              <item>Daewoo</item>
              <item>Daihatsu</item>
              <item>Daimler</item>
              <item>Datsun</item>
              <item>Dodge</item>
              <item>Donkervoort</item>
              <item>Ferrari</item>
              <item>Fiat</item>
              <item>Fisker</item>
              <item>Ford</item>
              <item>FSO</item>
              <item>Galloper</item>
              <item>Honda</item>
              <item>Hummer</item>
              <item>Hyundai</item>
              <item>Infiniti</item>
              <item>Innocenti</item>
              <item>Iveco</item>
              <item>Jaguar</item>
              <item>Jeep</item>
              <item>Josse</item>
              <item>Kia</item>
              <item>KTM</item>
              <item>Land Rover</item>
              <item>Landwind</item>
              <item>Lexus</item>
              <item>Lincoln</item>
              <item>Lotus</item>
              <item>Marcos</item>
              <item>Maserati</item>
              <item>Maybach</item>
              <item>Mazda</item>
              <item>Mega</item>
              <item>Mercedes</item>
              <item>Pontiac</item>
              <item>Porsche</item>
              <item>Princess</item>
              <item>Renault</item>
              <item>Rolls-Royce</item>
              <item>Rover</item>
              <item>Saab</item>
              <item>Seat</item>
              <item>Skoda</item>
              <item>Smart</item>
              <item>Spectre</item>
              <item>SsangYong</item>
               <item>Subaru</item>
                <item>Suzuki</item>
                 <item>Talbot</item>
                  <item>Tesla</item>
                   <item>Think</item>
                    <item>Toyota</item>
                    <item>Triumph</item>
                    <item>TVR</item>
                    <item>Volkswagen</item>
                    <item>Volvo</item>
    </string-array>
</resources>