<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lsv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_title"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
              android:textStyle="bold"
              android:gravity="center"
        android:text="@string/eaa" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/textView2"
                  android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                  android:gravity="center"
            android:text="@string/faciklama" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView2"
             android:layout_width="80dp"
            android:layout_height="60dp"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/textView3"
                  android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                  android:gravity="center"
            android:text="@string/saciklama" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView3"
        android:layout_width="80dp"
            android:layout_height="60dp"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                  android:textStyle="bold"
                        android:gravity="center"
            android:text="@string/taciklama" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView4"
              android:layout_width="80dp"
            android:layout_height="60dp"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
                  android:gravity="center"
            android:text="@string/ffaciklama" />

    </TableRow>
    
</LinearLayout>
